Fix landscape view on smaller devices

--- a/app/main.css
+++ b/app/main.css
@@ -7,13 +7,11 @@ body {
   margin: 0;
   padding: 0;
 }
-
 body {
   overflow: hidden;
   background-color: #3d81ee;
   font-family: 'Open Sans', sans-serif;
 }
-
 #main {
   display: -ms-flexbox;
   display: -webkit-flex;
@@ -22,61 +20,51 @@ body {
   width: 100%;
   height: 100%;
 }
-
 h1,
 h2 {
   line-height: .75em;
 }
-
 h2 {
   font-style: italic;
   font-size: 1.25em;
 }
-
 #bio {
   padding: 2% 0;
   display: flex;
   flex-direction: column;
   background-color: rgba(0, 0, 0, .2);
 }
-
 #bioText {
   color: #fff;
   flex: 1;
   text-align: center;
   margin: 0;
 }
-
 #icons {
   flex: 1;
   text-align: center;
-		justify-content: center;
-		margin: auto;
+  justify-content: center;
+  margin: auto;
 }
-
 #icons a {
-		float: left;
-		margin: auto;
+  float: left;
+  margin: auto;
 }
-
 .linkIcons {
   color: #fff;
-  font-size: 2.75em;
+  font-size: 3em;
   padding: .25em .5em;
-	margin: auto;
+  margin: auto;
 }
-
 #icons a:nth-child(4n) {
-		clear: left;
+  clear: left;
 }
-
 #avatar {
   display: flex;
   flex: 1;
   align-items: flex-end;
   border: 0;
 }
-
 img {
   max-width: 100%;
   max-height: 2300px;
