--- a/app/responsive.css
+++ b/app/responsive.css
@@ -2,41 +2,35 @@
   #main {
     flex-direction: row;
   }
-	
   #avatar {
     flex: 1;
   }
-	
   #bio {
-    flex: 1;
+    flex: 2;
     background-color: rgba(0, 0, 0, 0);
     margin: 0 15px 0 0;
   }
-	
   #bioText {
     display: flex;
     flex: 1;
     align-items: center;
     justify-content: flex-end;
     flex-direction: column;
-		margin: auto;
+    margin: auto;
   }
-	
   #icons {
     flex: 1;
     font-size: 2em;
     margin: auto;
-		padding-top: 5%;
+    padding-top: 5%;
+    text-align: center;
   }
-	
   .linkIcons {
     padding: 25% 25%;
   }
-	
   h1 {
     font-size: 2.5em;
   }
-	
   h2 {
     margin: 0;
     font-size: 1.5em;
